fix: fix use cupom button text-align and reposition

--- a/assets/styles/restaurante.css
+++ b/assets/styles/restaurante.css
@@ -189,8 +189,12 @@ header {
 }
 
 .cupom {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
-  margin-bottom: .8rem;
+  margin: 2rem auto;
+  text-align: center;
 }
 
 .status {
